tests/fixtures/invalid/str_3_args.py
# str() takes at most 1 argument, got 3
x = str(1, 1, 1)
